--- a/templates/page.templ
+++ b/templates/page.templ
@@ -6,6 +6,7 @@ templ page(title *string) {
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            <link href="/public/tailwind.css" rel="stylesheet"/>
 			<title>
                 if title == nil {
                     CookBook
