--- a/templates/page.templ
+++ b/templates/page.templ
@@ -1,17 +1,18 @@
 package templates
 
-templ page(title *string) {
+templ page(title string) {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+            <script src="https://unpkg.com/htmx.org@2.0.1"></script>
             <link href="/public/tailwind.css" rel="stylesheet"/>
 			<title>
-                if title == nil {
+                if title == "" {
                     CookBook
                 } else {
-                    { *title }
+                    { title }
                 }
             </title>
 		</head>
