--- a/templates/auth.templ
+++ b/templates/auth.templ
@@ -1,42 +1,116 @@
 package templates
 
+templ authPage(title string) {
+    @page(title) {
+        <div class="flex flex-col justify-center h-screen items-center">
+            <h1 class="text-5xl font-bold mb-10">Welcome to<br>CookBook !!</h1>
+            { children... }
+        </div>
+    }
+}
+
 templ LoginPage() {
-    @page("Log In") {
+    @authPage("Log In") {
         @LoginForm("", "", "")
     }
 }
 
 templ LoginForm(username string, password string, err string) {
-    <form hx-post="/login" hx-swap="outerHTML">
-        <input type="text" name="username" label="Username" placeholder="Username" value={username} required />
-        <input type="password" name="password" label="Password" placeholder="Password" value={password} required />
-        <button type="submit">Log In</button>
+    <form hx-post="/login" hx-swap="outerHTML" class="h-fit">
+        @usernameInp(username)
+        <div class="mt-5"></div>
+        @passwordInp(password)
+        <button class="btn btn-neutral mt-5 w-full" type="submit">Log In</button>
         if err != "" {
             @errAlert(err)
         }
+        <div class="font-light mt-5">
+            Don't have an account? <a href="/createaccount" class="link">Create Account</a>
+        </div>
     </form>
 }
 
 templ CreatePage() {
-    @page("Create Account") {
+    @authPage("Create Account") {
         @CreateForm("", "", "", "")
     }
 }
 
 templ CreateForm(username string, displayName string, password string, err string) {
     <form hx-post="/createaccount" hx-swap="outerHTML">
-        <card class="card-footer">
-            <input type="text" name="username" label="Username" placeholder="Username" value={username} required />
-            <input type="text" name="name" label="Display Name" placeholder="Display Name" value={displayName} required />
-            <input type="password" name="password" label="Password" placeholder="Password" value={password} required />
-            <button type="submit">Create Account</button>
-            if err != "" {
-                @errAlert(err)
-            }
-        </card>
+        @usernameInp(username)
+        <div class="mt-5"></div>
+        @displayNameInp(displayName)
+        <div class="mt-5"></div>
+        @passwordInp(password)
+        <button class="btn btn-neutral mt-5 w-full" type="submit">Create Account</button>
+        if err != "" {
+            @errAlert(err)
+        }
+        <div class="font-light mt-5">
+            Already have an account? <a href="/login" class="link">Login</a>
+        </div>
     </form>
 }
 
+templ usernameInp(username string) {
+    <label class="input input-bordered flex items-center gap-2">
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 16 16"
+        fill="currentColor"
+        class="h-4 w-4 opacity-70">
+            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
+        </svg>
+        <input type="text" class="grow" placeholder="Username" name="username" value={username} required />
+    </label>
+}
+
+templ displayNameInp(displayName string) {
+    <label class="input input-bordered flex items-center gap-2">
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 16 16"
+        fill="currentColor"
+        class="h-4 w-4 opacity-70">
+            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
+        </svg>
+        <input type="text" class="grow" placeholder="Display Name" name="name" value={displayName} required />
+    </label>
+}
+
+templ passwordInp(password string) {
+    <label class="input input-bordered flex items-center gap-2">
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 16 16"
+        fill="currentColor"
+        class="h-4 w-4 opacity-70">
+            <path
+            fill-rule="evenodd"
+            d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
+            clip-rule="evenodd" />
+        </svg>
+        <input type="password" class="grow" value={password} placeholder="Password" required name="password" />
+    </label>
+}
+
 templ errAlert(err string) {
-    { err }
+    <template x-data="{ show: true }" x-if="show">
+        <div role="alert" class="alert alert-error my-5">
+            <svg
+            @click="show = false"
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 shrink-0 stroke-current"
+            fill="none"
+            viewBox="0 0 24 24">
+                <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            <span>{ err }</span>
+        </div>
+    </template>
 }
