--- a/templates/app.templ
+++ b/templates/app.templ
@@ -3,9 +3,8 @@ package templates
 templ AppPage(name string, title string) {
     @page(title) {
         <div class="flex flex-col justify-between h-screen">
-            <div class="overflow-auto">
-                @top(title)
-                <div>{ children... }</div>
+            <div class="grow overflow-auto">
+                { children... }
             </div>
             @nav(name)
         </div>
@@ -13,7 +12,7 @@ templ AppPage(name string, title string) {
 }
 
 templ top(title string) {
-    <h1 class="text-3xl font-bold w-fit m-auto my-5">
+    <h1 class="text-3xl font-bold w-fit m-auto my-3">
         if len(title) > 0 {
             { title }
         } else {
@@ -23,7 +22,7 @@ templ top(title string) {
 }
 
 templ nav(name string) {
-    <div class="btm-nav">
+    <div class="btm-nav flex-none">
         <a href="/" class={ templ.KV("active", name == "home") }>
             <i class="fa-solid fa-house"></i>
         </a>
