--- a/templates/page.templ
+++ b/templates/page.templ
@@ -2,7 +2,7 @@ package templates
 
 templ page(title string) {
 	<!DOCTYPE html>
-	<html lang="en" data-theme="lofi">
+	<html lang="en">
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
