--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -5,7 +5,30 @@ import "cookbook/templates"
 
 templ UserPage(user *models.Record) {
     @templates.AppPage("profile", user.GetString("name")) {
-        { user.Username() }
-        { user.GetString("name") }
+        <div class="m-2 card card-compact bg-base-100 shadow-xl">
+            <div class="card-body">
+                <div class="flex">
+                    <div class="avatar">
+                        <div class="w-24 rounded-xl">
+                            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                        </div>
+                    </div>
+                    <div class="ml-5 w-full text-center">
+                        <span class="text-2xl font-bold">{ user.GetString("name") }</span>
+                        <br>
+                        <span>{"@"}{ user.Username() }</span>
+                        <div class="flex justify-center gap-5">
+                            <span class="text-xl font-bold">54<br>Followers</span>
+                            <span class="text-xl font-bold">102<br>Following</span>
+                        </div>
+                    </div>
+                </div>
+                <p class="my-5">We are using cookies for no reason.</p>
+                <div class="card-actions">
+                    <button class="btn btn-outline grow">Settings</button>
+                    <button class="btn btn-outline w-fit">Share</button>
+                </div>
+            </div>
+        </div>    
     }
 }
