--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -16,7 +16,7 @@ templ UserPage(user *models.Record) {
                     <div class="ml-5 w-full text-center">
                         <span class="text-2xl font-bold">{ user.GetString("name") }</span>
                         <br>
-                        <span>{"@"}{ user.Username() }</span>
+                        <span class="text-lg">{"@"}{ user.Username() }</span>
                         <div class="flex justify-center gap-5">
                             <span class="text-xl font-bold">54<br>Followers</span>
                             <span class="text-xl font-bold">102<br>Following</span>
