--- a/templates/app.templ
+++ b/templates/app.templ
@@ -1,5 +1,7 @@
 package templates
 
+import "cookbook/templates/util"
+
 templ AppPage(name string, title string) {
     @page(title) {
         <div class="flex flex-col justify-between h-screen">
@@ -29,17 +31,17 @@ templ nav(name string) {
         <a href="/search" class={ templ.KV("active", name == "search") }>
             <i class="fa-solid fa-magnifying-glass"></i>
         </a>
-        @IfLoggedIn() {
+        if util.IsLoggedIn(ctx) {
             <a href="/createpost" class={ templ.KV("active", name == "createpost") }>
                 <i class="fa-regular fa-square-plus fa-xl"></i>
             </a>
         }
-        @IfLoggedIn() {
+        if util.IsLoggedIn(ctx) {
             <a href="/saved" class={ templ.KV("active", name == "saved") }>
                 <i class="fa-solid fa-bookmark"></i>
             </a>
         }
-        @IfLoggedIn() {
+        if util.IsLoggedIn(ctx) {
             <a href="/profile" class={ templ.KV("active", name == "profile") }>
                 <i class="fa-solid fa-user"></i>
             </a>
