--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -2,17 +2,27 @@ package user
 
 import "github.com/pocketbase/pocketbase/models"
 import "cookbook/templates"
+import "cookbook/templates/util"
+import "fmt"
 
 templ UserPage(user *models.Record) {
     @templates.AppPage("profile", user.GetString("name")) {
         <div class="m-2 card card-compact bg-base-100 shadow-xl">
             <div class="card-body">
-                <div class="flex">
-                    <div class="avatar">
-                        <div class="w-24 rounded-xl">
-                            <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                <div class="flex items-center">
+                    if user.GetString("avatar") != "" {
+                        <div class="avatar">
+                            <div class="w-24 rounded-xl">
+                                <img src={ util.Url(fmt.Sprintf("/user/%s/avatar", user.Username())) } />
+                            </div>
                         </div>
-                    </div>
+                    } else {
+                        <div class="avatar placeholder">
+                            <div class="bg-neutral text-neutral-content w-24 rounded-full">
+                                <span class="text-3xl">{ string(user.GetString("name")[0]) }</span>
+                            </div>
+                        </div>
+                    }
                     <div class="ml-5 w-full text-center">
                         <span class="text-2xl font-bold">{ user.GetString("name") }</span>
                         <br>
