--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -10,19 +10,7 @@ templ UserPage(user *models.Record) {
         <div class="m-2 card card-compact bg-base-100 shadow-xl">
             <div class="card-body">
                 <div class="flex items-center">
-                    if user.GetString("avatar") != "" {
-                        <div class="avatar">
-                            <div class="w-24 rounded-xl">
-                                <img src={ util.Url(fmt.Sprintf("/user/%s/avatar", user.Username())) } />
-                            </div>
-                        </div>
-                    } else {
-                        <div class="avatar placeholder">
-                            <div class="bg-neutral text-neutral-content w-24 rounded-full">
-                                <span class="text-3xl">{ string(user.GetString("name")[0]) }</span>
-                            </div>
-                        </div>
-                    }
+                    @pfp(user)
                     <div class="ml-5 w-full text-center">
                         <span class="text-2xl font-bold">{ user.GetString("name") }</span>
                         <br>
@@ -40,5 +28,21 @@ templ UserPage(user *models.Record) {
                 </div>
             </div>
         </div>    
+    }
+}
+
+templ pfp(user *models.Record) {
+    if user.GetString("avatar") != "" {
+        <div class="avatar">
+            <div class="w-24 rounded-xl">
+                <img src={ util.Url(fmt.Sprintf("/user/%s/avatar", user.Username())) } />
+            </div>
+        </div>
+    } else {
+        <div class="avatar placeholder">
+            <div class="bg-neutral text-neutral-content w-24 rounded-full">
+                <span class="text-3xl">{ string(user.GetString("name")[0]) }</span>
+            </div>
+        </div>
     }
 }
