--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -3,7 +3,6 @@ package user
 import "github.com/pocketbase/pocketbase/models"
 import "cookbook/templates"
 import "cookbook/templates/util"
-import "fmt"
 
 templ UserPage(user *models.Record) {
     @templates.AppPage("profile", user.GetString("name")) {
@@ -35,7 +34,7 @@ templ pfp(user *models.Record) {
     if user.GetString("avatar") != "" {
         <div class="avatar">
             <div class="w-24 rounded-xl">
-                <img src={ util.Url(fmt.Sprintf("/user/%s/avatar", user.Username())) } />
+                <img src={ util.Url("/user/%s/avatar", user.Username()) } />
             </div>
         </div>
     } else {
