--- a/templates/app.templ
+++ b/templates/app.templ
@@ -13,7 +13,7 @@ templ AppPage(name string, title string) {
     }
 }
 
-templ top(title string) {
+templ Title(title string) {
     <h1 class="text-3xl font-bold w-fit m-auto my-3">
         if len(title) > 0 {
             { title }
