--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -22,7 +22,7 @@ templ UserPage(user *models.Record) {
                 </div>
                 <p class="my-5">We are using cookies for no reason.</p>
                 <div class="card-actions">
-                    <button class="btn btn-outline grow">Settings</button>
+                    <a href="/settings" class="btn btn-outline grow">Settings</a>
                     <button class="btn btn-outline w-fit">Share</button>
                 </div>
             </div>
