--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -9,7 +9,7 @@ templ UserPage(user *models.Record) {
         <div class="m-2 card card-compact bg-base-100 shadow-xl">
             <div class="card-body">
                 <div class="flex items-center">
-                    @pfp(user)
+                    @Pfp(user)
                     <div class="ml-5 w-full text-center">
                         <span class="text-2xl font-bold">{ user.GetString("name") }</span>
                         <br>
@@ -30,7 +30,7 @@ templ UserPage(user *models.Record) {
     }
 }
 
-templ pfp(user *models.Record) {
+templ Pfp(user *models.Record) {
     if user.GetString("avatar") != "" {
         <div class="avatar">
             <div class="w-24 rounded-xl">
