--- a/templates/auth.templ
+++ b/templates/auth.templ
@@ -1,5 +1,7 @@
 package templates
 
+import "cookbook/templates/util"
+
 templ authPage(title string) {
     @page(title) {
         <div class="flex flex-col justify-center h-screen items-center">
@@ -22,7 +24,7 @@ templ LoginForm(username string, password string, err string) {
         @passwordInp(password)
         <button class="btn btn-neutral mt-5 w-full" type="submit">Log In</button>
         if err != "" {
-            @errAlert(err)
+            @util.ErrAlert(err)
         }
         <div class="font-light mt-5">
             Don't have an account?
@@ -49,7 +51,7 @@ templ CreateForm(username string, displayName string, password string, err strin
         @passwordInp(password)
         <button class="btn btn-neutral mt-5 w-full" type="submit">Create Account</button>
         if err != "" {
-            @errAlert(err)
+            @util.ErrAlert(err)
         }
         <div class="font-light mt-5">
             Already have an account?
@@ -101,24 +103,4 @@ templ passwordInp(password string) {
         </svg>
         <input type="password" class="grow" value={password} placeholder="Password" required name="password" />
     </label>
-}
-
-templ errAlert(err string) {
-    <template x-data="{ show: true }" x-if="show">
-        <div role="alert" class="alert alert-error my-5">
-            <svg
-            @click="show = false"
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 shrink-0 stroke-current"
-            fill="none"
-            viewBox="0 0 24 24">
-                <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-            <span>{ err }</span>
-        </div>
-    </template>
 }
