--- a/templates/page.templ
+++ b/templates/page.templ
@@ -7,6 +7,7 @@ templ page(title string) {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
             <script src="https://unpkg.com/htmx.org@2.0.1"></script>
+            <script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
             <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.1/dist/cdn.min.js"></script>
             <script src="https://kit.fontawesome.com/ce3ee80cde.js" crossorigin="anonymous"></script>
             <link href="/public/tailwind.css" rel="stylesheet"/>
