--- a/templates/settings/settings.templ
+++ b/templates/settings/settings.templ
@@ -17,17 +17,27 @@ templ SettingsPage(auth *models.Record) {
 }
 
 templ UpdatingInput(label string, name string, value string, update string) {
-    <form hx-post={ update } hx-swap="outerHTML" class="w-full">
-        <label class="form-control w-full" x-data={ fmt.Sprintf("{ init: '%s', value: '%s' }", value, value) }>
+    <form hx-post={ update } 
+    hx-ext="response-targets"
+    hx-target={ fmt.Sprintf("#%serror", name) } 
+    hx-target-error={ fmt.Sprintf("#%serror", name) } 
+    hx-trigger="submit"
+    x-data={ fmt.Sprintf("{ init: '%s', value: '%s' }", value, value) }
+    @htmx:after-request="e => { document.activeElement.blur(); if (e.detail.xhr.status == 200) $data.init = $data.value }"
+    class="w-full">
+        <label class="form-control w-full">
             <div class="label label-text">{ label }</div>
-            <input @keyup.escape="value = init"
-            type="text"
-            placeholder={ label }
-            name={ name }
-            x-model="value"
-            class="input input-bordered w-full" />
-            <input type="submit" x-show="init != value" value="Save" />
-            <button x-show="init != value" @click="value = init">Cancel</button>
+            <div class="flex join">
+                <input @keyup.escape="value = init"
+                type="text"
+                placeholder={ label }
+                name={ name }
+                x-model="value"
+                class="input input-bordered w-full" />
+                <input class="btn btn-outline w-fit join-item" type="submit" x-show="init != value" value="Save" />
+                <button class="btn btn-outline w-fit join-item" x-show="init != value" @click="value = init">Cancel</button>
+            </div>
+            <div id={ fmt.Sprintf("%serror", name) }></div>
         </label>
     </form>
 }
