--- a/templates/util/util.templ
+++ b/templates/util/util.templ
@@ -7,3 +7,24 @@ templ Image(src string, loading string) {
         <div x-show="state == 'error'">:(</div>
     </div>
 }
+
+
+templ ErrAlert(err string) {
+    <template x-data="{ show: true }" x-transition x-if="show">
+        <div role="alert" class="flex justify-start gap-5 alert alert-error my-5">
+            <svg
+            @click="show = false"
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 shrink-0 stroke-current"
+            fill="none"
+            viewBox="0 0 24 24">
+                <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            <span>{ err }</span>
+        </div>
+    </template>
+}
