--- a/templates/settings/settings.templ
+++ b/templates/settings/settings.templ
@@ -1,8 +1,8 @@
 package settings
 
-import "fmt"
 import "cookbook/templates"
 import "cookbook/templates/user"
+import "cookbook/templates/util"
 import "github.com/pocketbase/pocketbase/models"
 
 templ SettingsPage(auth *models.Record) {
@@ -10,34 +10,10 @@ templ SettingsPage(auth *models.Record) {
         @templates.Title("Settings")
         <div class="flex flex-col items-center gap-3 px-5">
             @user.Pfp(auth)
-            @UpdatingInput("Display Name", "name", auth.GetString("name"), "/profile")
-            @UpdatingInput("Username", "username", auth.Username(), "/profile")
+            @util.UpdatingInput("Display Name", "name", auth.GetString("name"), "/profile")
+            @util.UpdatingInput("Username", "username", auth.Username(), "/profile")
+            @util.UpdatingInput("Bio", "bio", auth.GetString("bio"), "/profile")
         </div>
     }
 }
 
-templ UpdatingInput(label string, name string, value string, update string) {
-    <form hx-post={ update } 
-    hx-ext="response-targets"
-    hx-target={ fmt.Sprintf("#%serror", name) } 
-    hx-target-error={ fmt.Sprintf("#%serror", name) } 
-    hx-trigger="submit"
-    x-data={ fmt.Sprintf("{ init: '%s', value: '%s' }", value, value) }
-    @htmx:after-request="e => { document.activeElement.blur(); if (e.detail.xhr.status == 200) $data.init = $data.value }"
-    class="w-full">
-        <label class="form-control w-full">
-            <div class="label label-text">{ label }</div>
-            <div class="flex join">
-                <input @keyup.escape="value = init"
-                type="text"
-                placeholder={ label }
-                name={ name }
-                x-model="value"
-                class="input input-bordered w-full" />
-                <input class="btn btn-outline w-fit join-item" type="submit" x-show="init != value" value="Save" />
-                <button class="btn btn-outline w-fit join-item" x-show="init != value" @click="value = init">Cancel</button>
-            </div>
-            <div id={ fmt.Sprintf("%serror", name) }></div>
-        </label>
-    </form>
-}
