--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -35,8 +35,8 @@ templ UserPage(user *models.Record) {
 templ Pfp(user *models.Record) {
     if user.GetString("avatar") != "" {
         <div class="avatar">
-            <div class="w-24 rounded-xl">
-                <img src={ util.Url("/user/%s/avatar", user.Username()) } />
+            <div class="w-24 h-24 rounded-xl">
+                <img x-ref="avatar" src={ util.Url("/user/%s/avatar", user.Username()) } />
             </div>
         </div>
     } else {
