--- a/templates/util/util.templ
+++ b/templates/util/util.templ
@@ -37,7 +37,8 @@ templ UpdatingInput(label string, name string, value string, update string) {
     hx-target={ fmt.Sprintf("#%serror", name) } 
     hx-target-error={ fmt.Sprintf("#%serror", name) } 
     hx-trigger="submit"
-    x-data={ fmt.Sprintf("{ init: '%s', value: '%s' }", value, value) }
+    data-value={ value }
+    x-data="{ init: $el.getAttribute('data-value'), value: $el.getAttribute('data-value') }"
     @htmx:after-request="e => { document.activeElement.blur(); if (e.detail.xhr.status == 200) $data.init = $data.value }"
     class="w-full">
         <label class="form-control w-full">
