--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -3,9 +3,18 @@ package user
 import "github.com/pocketbase/pocketbase/models"
 import "cookbook/templates"
 import "cookbook/templates/util"
+import "strconv"
 
-templ UserPage(user *models.Record) {
-    @templates.AppPage("profile", user.GetString("name")) {
+func pageName(self bool) string {
+    if self {
+        return "profile"
+    } else {
+        return "user"
+    }
+}
+
+templ UserPage(user *models.Record, followers int, following int, self bool, isFollowing bool) {
+    @templates.AppPage(pageName(self), user.GetString("name")) {
         <div class="m-2 card card-compact bg-base-100 shadow-xl">
             <div class="card-body">
                 <div class="flex items-center">
@@ -14,19 +23,28 @@ templ UserPage(user *models.Record) {
                         <span class="text-2xl font-bold">{ user.GetString("name") }</span>
                         <br>
                         <span class="text-lg">{"@"}{ user.Username() }</span>
-                        <div class="flex justify-center gap-5">
-                            <span class="text-xl font-bold">54<br>Followers</span>
-                            <span class="text-xl font-bold">102<br>Following</span>
+                        <div id="followCounter" class="flex justify-center gap-5">
+                            @FollowCounter(followers, following)
                         </div>
                     </div>
                 </div>
                 if user.GetString("bio") != "" {
                     <p class="mt-5">{ user.GetString("bio") }</p>
                 }
-                <div class="card-actions mt-5">
-                    <a href="/settings" class="btn btn-outline grow">Settings</a>
-                    <button class="btn btn-outline w-fit">Share</button>
-                </div>
+                if util.IsLoggedIn(ctx) {
+                    <div class="card-actions mt-5">
+                        if self {
+                            <a href="/settings" class="btn btn-outline grow">Settings</a>
+                        } else {
+                            if isFollowing {
+                                <button class="btn btn-outline grow" hx-post={ util.Url("/user/%s/unfollow", user.Id) } hx-target="#followCounter">Unfollow</button>
+                            } else {
+                                <button class="btn btn-outline grow" hx-post={ util.Url("/user/%s/follow", user.Id) } hx-target="#followCounter">Follow</button>
+                            }
+                        }
+                        <button class="btn btn-outline w-fit">Share</button>
+                    </div>
+                }
             </div>
         </div>    
     }
@@ -46,4 +64,9 @@ templ Pfp(user *models.Record) {
             </div>
         </div>
     }
+}
+
+templ FollowCounter(followers int, following int) {
+    <span class="text-xl font-bold">{ strconv.Itoa(followers) }<br/>Followers</span>
+    <span class="text-xl font-bold">{ strconv.Itoa(following) }<br/>Following</span>
 }
