--- a/templates/user/user.templ
+++ b/templates/user/user.templ
@@ -23,14 +23,14 @@ templ UserPage(user *models.Record, followers int, following int, self bool, isF
                         <span class="text-2xl font-bold">{ user.GetString("name") }</span>
                         <br>
                         <span class="text-lg">{"@"}{ user.Username() }</span>
-                        @followCounter(followers, following)
+                        @followCounter(user, followers, following, false)
                     </div>
                 </div>
                 if user.GetString("bio") != "" {
                     <p class="mt-5">{ user.GetString("bio") }</p>
                 }
                 if util.IsLoggedIn(ctx) {
-                    @actions(user, self, isFollowing)
+                    @actions(user, self, isFollowing, false)
                 }
             </div>
         </div>    
@@ -41,7 +41,7 @@ templ Pfp(user *models.Record) {
     if user.GetString("avatar") != "" {
         <div class="avatar">
             <div class="w-24 h-24 rounded-xl">
-                <img x-ref="avatar" src={ util.Url("/user/%s/avatar", user.Username()) } />
+                <img x-ref="avatar" src={ util.SUrl("/user/%s/avatar", user.Username()) } />
             </div>
         </div>
     } else {
@@ -54,26 +54,32 @@ templ Pfp(user *models.Record) {
 }
 
 templ FollowResponse(user *models.Record, followers int, following int, self bool, isFollowing bool) {
-    @followCounter(followers, following)
-    @actions(user, self, isFollowing)
+    @followCounter(user, followers, following, true)
+    @actions(user, self, isFollowing, true)
 }
 
-templ followCounter(followers int, following int) {
-    <div id="followCounter" class="flex justify-center gap-5" hx-swap-oob="true">
+templ followCounter(user *models.Record, followers int, following int, oob bool) {
+    <a href={ util.Url("/user/%s/following", user.Username()) } id="followCounter" class="flex justify-center gap-5"
+    if oob {
+        hx-swap-oob="true"
+    }>
         <span class="text-xl font-bold">{ strconv.Itoa(followers) }<br/>Followers</span>
         <span class="text-xl font-bold">{ strconv.Itoa(following) }<br/>Following</span>
-    </div>
+    </a>
 }
 
-templ actions(user *models.Record, self bool, isFollowing bool) {
-    <div id="actions" class="card-actions mt-5" hx-swap-oob="true">
+templ actions(user *models.Record, self bool, isFollowing bool, oob bool) {
+    <div id="actions" class="card-actions mt-5"
+    if oob { 
+        hx-swap-oob="true"
+    }>
         if self {
             <a href="/settings" class="btn btn-outline grow">Settings</a>
         } else {
             if isFollowing {
-                <button class="btn btn-outline grow" hx-post={ util.Url("/user/%s/unfollow", user.Username()) }>Unfollow</button>
+                <button class="btn btn-outline grow" hx-post={ util.SUrl("/user/%s/unfollow", user.Username()) }>Unfollow</button>
             } else {
-                <button class="btn btn-outline grow" hx-post={ util.Url("/user/%s/follow", user.Username()) }>Follow</button>
+                <button class="btn btn-outline grow" hx-post={ util.SUrl("/user/%s/follow", user.Username()) }>Follow</button>
             }
         }
         <button class="btn btn-outline w-fit">Share</button>
